feat: 更新部分依赖

--- a/package/vite-plugin-markdown-transformer/package.json
+++ b/package/vite-plugin-markdown-transformer/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "vite-plugin-markdown-transformer",
+  "name": "@ainuo-utils/vite-plugin-markdown-transformer",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "rimraf dist && npm run build-bundle",
+    "build-bundle": "esbuild src/index.ts --bundle --platform=node --target=node12 --external:@vue/compiler-sfc --external:vue/compiler-sfc --external:vite --outfile=dist/index.js"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -10,6 +14,8 @@
     "vite": "^4.2.1"
   },
   "devDependencies": {
-    "@types/markdown-it": "^12.2.3"
+    "@types/markdown-it": "^12.2.3",
+    "esbuild": "^0.17.16",
+    "rimraf": "^5.0.0"
   }
 }
